--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,8 +71,8 @@ jobs:
         with:
           containerfiles: |
             ./Containerfile
-          image: ${{ env.IMAGE_NAME }}
-          tags: ${{ steps.metadata.outputs.tags }}
+          image: raw-img
+          tags: latest
           labels: ${{ steps.metadata.outputs.labels }}
           oci: false
 
@@ -81,18 +81,10 @@ jobs:
         uses: hhd-dev/rechunk@f153348d8100c1f504dec435460a0d7baf11a9d2
         with:
           rechunk: 'ghcr.io/hhd-dev/rechunk:v1.0.1'
-          ref: "localhost/${{ env.IMAGE_NAME }}:latest"
+          ref: 'raw-img'
           prev-ref: "${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
           skip_compression: true
           labels: ${{ steps.metadata.outputs.labels }}
-
-      - name: Load in podman and tag
-        run: |
-          IMAGE="${{ steps.rechunk.outputs.ref }}"
-          sudo rm -rf ${{ steps.rechunk.outputs.output }}
-          for tag in ${{ steps.metadata.outputs.tags }}; do
-            podman tag $IMAGE ${{ env.IMAGE_NAME }}:$tag
-          done
 
       # These `if` statements are so that pull requests for your custom images do not make it publish any packages under your name without you knowing
       # They also check if the runner is on the default branch so that things like the merge queue (if you enable it), are going to work
@@ -117,3 +109,4 @@ jobs:
           tags: ${{ steps.metadata.outputs.tags }}
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASSWORD }}
+          source: ${{ steps.rechunk.outputs.ref }}
